@startuml
' -------------------------
' Modèle Logique de Données – MySQL
' -------------------------
skinparam entity {
  BackgroundColor #E3F2FD
  BorderColor #1976D2
}
skinparam linetype ortho

' -------------------------
' Tables de référence (Enums)
' -------------------------
entity Voix {
  * code : VARCHAR(20) [PK]
}

entity Instrument {
  * code : VARCHAR(20) [PK]
}

entity StatutPlanning {
  * code : VARCHAR(20) [PK]
}

entity TypeResponsabilite {
  * code : VARCHAR(50) [PK]
}

' -------------------------
' Tables principales
' -------------------------
entity OrganisationICC {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  dateCreation : DATE
}

entity Pays {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  code : VARCHAR(10)
  + organisation_id : CHAR(36) [FK -> OrganisationICC.id]
}

entity Campus {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  ville : VARCHAR(255)
  timezone : VARCHAR(50)
  + pays_id : CHAR(36) [FK -> Pays.id]
}

entity Ministere {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  dateCreation : DATE
  actif : BOOLEAN
  + campus_id : CHAR(36) [FK -> Campus.id]
}

entity Pole {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  description : TEXT
  + ministere_id : CHAR(36) [FK -> Ministere.id]
}

entity Membre {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  prenom : VARCHAR(255)
  email : VARCHAR(255)
  telephone : VARCHAR(50)
  date_inscription : DATE
  actif : BOOLEAN
  + ministere_id : CHAR(36) [FK -> Ministere.id]
  + pole_id : CHAR(36) [FK -> Pole.id]
}

entity Chantre {
  * id : CHAR(36) [PK]
  date_integration : DATE
  niveau : VARCHAR(50)
  + membre_id : CHAR(36) [FK -> Membre.id]
}

entity Choriste {
  * id : CHAR(36) [PK]
  voix_code : VARCHAR(20) [FK -> Voix.code]
  secondaireVoix : VARCHAR(50)
  + chantre_id : CHAR(36) [FK -> Chantre.id]
}

entity Musicien {
  * id : CHAR(36) [PK]
  instrument_code : VARCHAR(20) [FK -> Instrument.code]
  instrumentPrincipal : VARCHAR(50)
  + chantre_id : CHAR(36) [FK -> Chantre.id]
}

entity Equipe {
  * id : CHAR(36) [PK]
  nom : VARCHAR(255)
  active : BOOLEAN
  + ministere_id : CHAR(36) [FK -> Ministere.id]
}

entity Equipe_Membre {
  * equipe_id : CHAR(36) [FK -> Equipe.id] [PK]
  * membre_id : CHAR(36) [FK -> Membre.id] [PK]
}

entity Activite {
  * id : CHAR(36) [PK]
  type : VARCHAR(100)
  dateDebut : DATETIME
  dateFin : DATETIME
  lieu : VARCHAR(255)
  description : TEXT
  + campus_id : CHAR(36) [FK -> Campus.id]
}

entity PlanningService {
  * id : CHAR(36) [PK]
  statut_code : VARCHAR(20) [FK -> StatutPlanning.code]
  dateCreation : DATE
  + activite_id : CHAR(36) [FK -> Activite.id]
}

entity Affectation {
  * id : CHAR(36) [PK]
  role : VARCHAR(50)
  voix_code : VARCHAR(20) [FK -> Voix.code]
  instrument_code : VARCHAR(20) [FK -> Instrument.code]
  principal : BOOLEAN
  presenceConfirmee : BOOLEAN
  + planning_id : CHAR(36) [FK -> PlanningService.id]
  + chantre_id : CHAR(36) [FK -> Chantre.id]
}

entity Indisponibilite {
  * id : CHAR(36) [PK]
  dateDebut : DATE
  dateFin : DATE
  motif : TEXT
  validee : BOOLEAN
  + chantre_id : CHAR(36) [FK -> Chantre.id]
}

entity Responsabilite {
  * id : CHAR(36) [PK]
  type_code : VARCHAR(50) [FK -> TypeResponsabilite.code]
  dateDebut : DATE
  dateFin : DATE
  actif : BOOLEAN
  + membre_id : CHAR(36) [FK -> Membre.id]
  + ministere_id : CHAR(36) [FK -> Ministere.id] [NULLABLE]
  + pole_id : CHAR(36) [FK -> Pole.id] [NULLABLE]
  + activite_id : CHAR(36) [FK -> Activite.id] [NULLABLE]
}

' -------------------------
' Relations visuelles
' -------------------------
OrganisationICC ||--o{ Pays
Pays ||--o{ Campus
Campus ||--o{ Ministere
Ministere ||--o{ Pole
Ministere ||--o{ Membre
Pole ||--o{ Membre
Ministere ||--o{ Equipe
Equipe ||--o{ Equipe_Membre
Membre ||--o{ Equipe_Membre
Membre ||--o{ Chantre
Chantre ||--o{ Choriste
Chantre ||--o{ Musicien
Campus ||--o{ Activite
Activite ||--|| PlanningService
PlanningService ||--o{ Affectation
Chantre ||--o{ Affectation
Chantre ||--o{ Indisponibilite
Membre ||--o{ Responsabilite
Responsabilite ||--|| Ministere
Responsabilite ||--|| Pole
Responsabilite ||--|| Activite

' -------------------------
' Relations Classe -> Enum
' -------------------------
Choriste ..> Voix : voix_code
Musicien ..> Instrument : instrument_code
Affectation ..> Voix : voix_code
Affectation ..> Instrument : instrument_code
PlanningService ..> StatutPlanning : statut_code
Responsabilite ..> TypeResponsabilite : type_code

@enduml
